--- a/examples/vendored/complicated_cargo_library/cargo/BUILD.bazel
+++ b/examples/vendored/complicated_cargo_library/cargo/BUILD.bazel
@@ -1,6 +1,6 @@
 """
 @generated
-cargo-raze workspace build file.
+cargo-raze generated Bazel file.
 
 DO NOT EDIT! Replaced on runs of cargo-raze
 """
