--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.clap-2.33.3.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.clap-2.33.3.bazel
@@ -77,6 +77,7 @@ rust_library(
             "@io_bazel_rules_rust//rust/platform:powerpc-unknown-linux-gnu",
             "@io_bazel_rules_rust//rust/platform:s390x-unknown-linux-gnu",
             "@io_bazel_rules_rust//rust/platform:wasm32-unknown-unknown",
+            "@io_bazel_rules_rust//rust/platform:wasm32-wasi",
             "@io_bazel_rules_rust//rust/platform:x86_64-apple-darwin",
             "@io_bazel_rules_rust//rust/platform:x86_64-apple-ios",
             "@io_bazel_rules_rust//rust/platform:x86_64-linux-android",
