--- a/examples/remote/complicated_cargo_library/cargo/remote/BUILD.time-0.1.44.bazel
+++ b/examples/remote/complicated_cargo_library/cargo/remote/BUILD.time-0.1.44.bazel
@@ -52,6 +52,14 @@ rust_library(
     deps = [
         "@remote_complicated_cargo_library__libc__0_2_77//:libc",
     ] + selects.with_or({
+        # cfg(target_os = "wasi")
+        (
+            "@io_bazel_rules_rust//rust/platform:wasm32-wasi",
+        ): [
+            "@remote_complicated_cargo_library__wasi__0_10_0_wasi_snapshot_preview1//:wasi",
+        ],
+        "//conditions:default": [],
+    }) + selects.with_or({
         # cfg(windows)
         (
             "@io_bazel_rules_rust//rust/platform:i686-pc-windows-msvc",
