--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.winapi-i686-pc-windows-gnu-0.4.0.bazel
@@ -28,7 +28,8 @@ licenses([
     "notice",  # MIT from expression "MIT OR Apache-2.0"
 ])
 
-# Generated Targets# buildifier: disable=load-on-top
+# Generated Targets
+# buildifier: disable=load-on-top
 load(
     "@io_bazel_rules_rust//cargo:cargo_build_script.bzl",
     "cargo_build_script",
