--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.clicolors-control-1.0.1.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.clicolors-control-1.0.1.bazel
@@ -58,6 +58,7 @@ rust_library(
     ] + selects.with_or({
         # cfg(unix)
         (
+            "@io_bazel_rules_rust//rust/platform:aarch64-apple-darwin",
             "@io_bazel_rules_rust//rust/platform:aarch64-apple-ios",
             "@io_bazel_rules_rust//rust/platform:aarch64-linux-android",
             "@io_bazel_rules_rust//rust/platform:aarch64-unknown-linux-gnu",
