--- a/examples/remote/binary_dependencies/cargo/remote/BUILD.texture-synthesis-cli-0.8.0.bazel
+++ b/examples/remote/binary_dependencies/cargo/remote/BUILD.texture-synthesis-cli-0.8.0.bazel
@@ -57,6 +57,7 @@ rust_binary(
     ] + selects.with_or({
         # cfg(not(target_arch = "wasm32"))
         (
+            "@io_bazel_rules_rust//rust/platform:aarch64-apple-darwin",
             "@io_bazel_rules_rust//rust/platform:aarch64-apple-ios",
             "@io_bazel_rules_rust//rust/platform:aarch64-linux-android",
             "@io_bazel_rules_rust//rust/platform:aarch64-unknown-linux-gnu",
