--- a/examples/vendored/hello_cargo_library/Cargo.toml
+++ b/examples/vendored/hello_cargo_library/Cargo.toml
@@ -17,3 +17,4 @@ target = "x86_64-unknown-linux-gnu"
 output_buildfile_suffix = "BUILD.bazel"
 gen_workspace_prefix = "vendored_hello_cargo_library"
 genmode = "Vendored"
+package_aliases_dir = "cargo"
