--- a/impl/src/rendering/templates/remote_crates.bzl.template
+++ b/impl/src/rendering/templates/remote_crates.bzl.template
@@ -1,7 +1,10 @@
 {%- include "templates/partials/header.template" %}
+{%- if is_remote_genmode %}
 load("@bazel_tools//tools/build_defs/repo:git.bzl", "new_git_repository")  # buildifier: disable=load
 load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")  # buildifier: disable=load
 load("@bazel_tools//tools/build_defs/repo:utils.bzl", "maybe")  # buildifier: disable=load
+
+{% include "templates/partials/crates_macro.template" %}
 
 def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {%- if crates %}
@@ -35,4 +38,7 @@ def {{workspace.gen_workspace_prefix}}_fetch_remote_crates():
 {%- else %}
     """No crates were detected in the source Cargo.toml. This is a no-op"""
     pass
-{%  endif -%}
+{% endif %}
+{%- else %}
+{% include "templates/partials/crates_macro.template" %}
+{% endif %}
