--- a/smoke_test/vendored/hello_cargo_library/Cargo.toml
+++ b/smoke_test/vendored/hello_cargo_library/Cargo.toml
@@ -13,8 +13,15 @@ path = "src/main.rs"
 
 [package.metadata.raze]
 workspace_path = "//vendored/hello_cargo_library/cargo"
-target = "x86_64-unknown-linux-gnu"
+targets = [
+    "aarch64-apple-darwin",
+    "aarch64-unknown-linux-gnu",
+    "x86_64-apple-darwin",
+    "x86_64-pc-windows-msvc",
+    "x86_64-unknown-linux-gnu",
+]
 output_buildfile_suffix = "BUILD.bazel"
 gen_workspace_prefix = "vendored_hello_cargo_library"
 genmode = "Vendored"
 package_aliases_dir = "cargo"
+default_gen_buildrs = false
