--- a/smoke_test/remote/non_cratesio/Cargo.toml
+++ b/smoke_test/remote/non_cratesio/Cargo.toml
@@ -17,10 +17,17 @@ path = "src/main.rs"
 
 [package.metadata.raze]
 workspace_path = "//remote/non_cratesio/cargo"
-target = "x86_64-unknown-linux-gnu"
+targets = [
+    "aarch64-apple-darwin",
+    "aarch64-unknown-linux-gnu",
+    "x86_64-apple-darwin",
+    "x86_64-pc-windows-msvc",
+    "x86_64-unknown-linux-gnu",
+]
 genmode = "Remote"
 gen_workspace_prefix = "remote_non_cratesio"
 package_aliases_dir = "cargo"
+default_gen_buildrs = false
 
 [package.metadata.raze.crates.log.'0.4.11']
 additional_flags = [
