--- a/examples/remote/non_cratesio/cargo/remote/BUILD.termcolor-0.3.6.bazel
+++ b/examples/remote/non_cratesio/cargo/remote/BUILD.termcolor-0.3.6.bazel
@@ -33,6 +33,8 @@ licenses([
 rust_library(
     name = "termcolor",
     srcs = glob(["**/*.rs"]),
+    aliases = {
+    },
     crate_features = [
     ],
     crate_root = "src/lib.rs",
@@ -49,5 +51,13 @@ rust_library(
     version = "0.3.6",
     # buildifier: leave-alone
     deps = [
-    ],
+    ] + selects.with_or({
+        # cfg(windows)
+        (
+            "@io_bazel_rules_rust//rust/platform:x86_64-pc-windows-msvc",
+        ): [
+            "@remote_non_cratesio__wincolor__0_1_6//:wincolor",
+        ],
+        "//conditions:default": [],
+    }),
 )
