--- a/examples/remote/complicated_cargo_library/cargo/remote/BUILD.libloading-0.5.2.bazel
+++ b/examples/remote/complicated_cargo_library/cargo/remote/BUILD.libloading-0.5.2.bazel
@@ -71,7 +71,7 @@ rust_library(
 
 # Unsupported target "windows" with type "test" omitted
 
-# Additional content from cargo/libloading_global_static.BUILD
+# Additional content from ../../libloading_global_static.BUILD
 # buildifier: disable=load-on-top
 load("@rules_cc//cc:defs.bzl", "cc_library")
 
