--- a/impl/Cargo.toml
+++ b/impl/Cargo.toml
@@ -25,7 +25,7 @@ path = "src/bin/cargo-raze.rs"
 anyhow = "1.0.35"
 cargo_metadata = "0.12.1"
 cargo_toml = "0.8.1"
-cargo-clone-crate = "0.1.4"
+cargo-clone-crate = { version = "0.1.5", default-features = false }
 cargo-lock = "6.0.0"
 cargo-platform = "0.1.1"
 cfg-expr = "0.5.0"
