--- a/examples/vendored/cargo_workspace/num_printer/BUILD.bazel
+++ b/examples/vendored/cargo_workspace/num_printer/BUILD.bazel
@@ -1,4 +1,5 @@
 load("@io_bazel_rules_rust//rust:rust.bzl", "rust_binary")
+load("//vendored/cargo_workspace/cargo:crates.bzl", "all_crates")
 
 package(default_visibility = ["//visibility:public"])
 
@@ -7,7 +8,6 @@ rust_binary(
     srcs = ["src/main.rs"],
     edition = "2018",
     deps = [
-        "//vendored/cargo_workspace/num_printer/cargo:clap",
         "//vendored/cargo_workspace/printer",
-    ],
+    ] + all_crates(),
 )
