--- a/impl/src/rendering/templates/partials/crates_macro.template
+++ b/impl/src/rendering/templates/partials/crates_macro.template
@@ -1,5 +1,5 @@
 # A mapping of package names to a set of normal dependencies for the Rust targets of that package.
-DEPENDENCIES = {
+_DEPENDENCIES = {
 {%- for workspace_member in workspace.workspace_members %}
 {%- if workspace_member %}
     "{{ bazel_package_name }}/{{ workspace_member }}": {
@@ -17,7 +17,7 @@ DEPENDENCIES = {
 }
 
 # A mapping of package names to a set of proc_macro dependencies for the Rust targets of that package.
-PROC_MACRO_DEPENDENCIES = {
+_PROC_MACRO_DEPENDENCIES = {
 {%- for workspace_member in workspace.workspace_members %}
 {%- if workspace_member %}
     "{{ bazel_package_name }}/{{ workspace_member }}": {
@@ -35,7 +35,7 @@ PROC_MACRO_DEPENDENCIES = {
 }
 
 # A mapping of package names to a set of normal dev dependencies for the Rust targets of that package.
-DEV_DEPENDENCIES = {
+_DEV_DEPENDENCIES = {
 {%- for workspace_member in workspace.workspace_members %}
 {%- if workspace_member %}
     "{{ bazel_package_name }}/{{ workspace_member }}": {
@@ -53,7 +53,7 @@ DEV_DEPENDENCIES = {
 }
 
 # A mapping of package names to a set of proc_macro dev dependencies for the Rust targets of that package.
-DEV_PROC_MACRO_DEPENDENCIES = {
+_DEV_PROC_MACRO_DEPENDENCIES = {
 {%- for workspace_member in workspace.workspace_members %}
 {%- if workspace_member %}
     "{{ bazel_package_name }}/{{ workspace_member }}": {
@@ -71,7 +71,9 @@ DEV_PROC_MACRO_DEPENDENCIES = {
 }
 
 def crates(deps):
-    """Finds the fully qualified label of the requested crates for the package where this macro is called.
+    """EXPERIMENTAL: Finds the fully qualified label of the requested crates for the package where this macro is called.
+
+    WARNING: This macro is part of an expeirmental API and is subject to change.
 
     Args:
         deps (list or str): Either a list of dependencies or a string of one which will
@@ -82,8 +84,8 @@ def crates(deps):
 
     # Join both sets of dependencies
     dependencies = dict()
-    for dep_map in [DEPENDENCIES, PROC_MACRO_DEPENDENCIES, DEV_DEPENDENCIES, DEV_PROC_MACRO_DEPENDENCIES]:
-        for package_name in DEPENDENCIES:
+    for dep_map in [_DEPENDENCIES, _PROC_MACRO_DEPENDENCIES, _DEV_DEPENDENCIES, _DEV_PROC_MACRO_DEPENDENCIES]:
+        for package_name in _DEPENDENCIES:
             if package_name in dependencies:
                 dependencies[package_name].extend(dep_map[package_name])
             else:
@@ -116,11 +118,13 @@ def crates(deps):
     return crates
 
 def all_crates(normal = False, proc_macro = False, dev = False, dev_only = False):
-    """Finds the fully qualified label of all requested direct crate dependencies \
+    """EXPERIMENTAL: Finds the fully qualified label of all requested direct crate dependencies \
     for the package where this macro is called.
 
     If no parameters are set, all normal and proc_macro dependencies are returned.
     Setting any one flag will otherwise impact the contents of the returned list
+
+    WARNING: This macro is part of an expeirmental API and is subject to change.
 
     Args:
         normal (bool, optional): If True, normal dependencies are included in the
@@ -142,21 +146,21 @@ def all_crates(normal = False, proc_macro = False, dev = False, dev_only = False
     all_maps = []
     if normal:
         if not dev_only:
-            all_maps.append(DEPENDENCIES)
+            all_maps.append(_DEPENDENCIES)
         if dev or dev_only:
-            all_maps.append(DEV_DEPENDENCIES)
+            all_maps.append(_DEV_DEPENDENCIES)
     if proc_macro:
         if not dev_only:
-            all_maps.append(PROC_MACRO_DEPENDENCIES)
+            all_maps.append(_PROC_MACRO_DEPENDENCIES)
         if dev or dev_only:
-            all_maps.append(DEV_PROC_MACRO_DEPENDENCIES)
+            all_maps.append(_DEV_PROC_MACRO_DEPENDENCIES)
 
     # Default to always using normal dependencies
     if not all_maps:
         if not dev_only:
-            all_maps.append(DEPENDENCIES)
+            all_maps.append(_DEPENDENCIES)
         if dev or dev_only:
-            all_maps.append(DEV_DEPENDENCIES)
+            all_maps.append(_DEV_DEPENDENCIES)
 
     if not all_maps:
         fail("Failed to add at least 1 map to the `all_maps` list with parameters: " +
