--- a/impl/src/rendering/templates/partials/crates_macro.template
+++ b/impl/src/rendering/templates/partials/crates_macro.template
@@ -1,4 +1,4 @@
-# EXPERIMENTAL: A mapping of package names to a set of normal dependencies for the Rust targets of that package.
+# EXPERIMENTAL -- MAY CHANGE AT ANY TIME: A mapping of package names to a set of normal dependencies for the Rust targets of that package.
 _DEPENDENCIES = {
 {%- for workspace_member in workspace.workspace_members %}
 {%- if workspace_member %}
@@ -16,7 +16,7 @@ _DEPENDENCIES = {
 {%- endfor %}
 }
 
-# EXPERIMENTAL: A mapping of package names to a set of proc_macro dependencies for the Rust targets of that package.
+# EXPERIMENTAL -- MAY CHANGE AT ANY TIME: A mapping of package names to a set of proc_macro dependencies for the Rust targets of that package.
 _PROC_MACRO_DEPENDENCIES = {
 {%- for workspace_member in workspace.workspace_members %}
 {%- if workspace_member %}
@@ -34,7 +34,7 @@ _PROC_MACRO_DEPENDENCIES = {
 {%- endfor %}
 }
 
-# EXPERIMENTAL: A mapping of package names to a set of normal dev dependencies for the Rust targets of that package.
+# EXPERIMENTAL -- MAY CHANGE AT ANY TIME: A mapping of package names to a set of normal dev dependencies for the Rust targets of that package.
 _DEV_DEPENDENCIES = {
 {%- for workspace_member in workspace.workspace_members %}
 {%- if workspace_member %}
@@ -52,7 +52,7 @@ _DEV_DEPENDENCIES = {
 {%- endfor %}
 }
 
-# EXPERIMENTAL: A mapping of package names to a set of proc_macro dev dependencies for the Rust targets of that package.
+# EXPERIMENTAL -- MAY CHANGE AT ANY TIME: A mapping of package names to a set of proc_macro dev dependencies for the Rust targets of that package.
 _DEV_PROC_MACRO_DEPENDENCIES = {
 {%- for workspace_member in workspace.workspace_members %}
 {%- if workspace_member %}
@@ -71,7 +71,7 @@ _DEV_PROC_MACRO_DEPENDENCIES = {
 }
 
 def crates(deps):
-    """EXPERIMENTAL: Finds the fully qualified label of the requested crates for the package where this macro is called.
+    """EXPERIMENTAL -- MAY CHANGE AT ANY TIME: Finds the fully qualified label of the requested crates for the package where this macro is called.
 
     WARNING: This macro is part of an expeirmental API and is subject to change.
 
@@ -118,7 +118,7 @@ def crates(deps):
     return crates
 
 def all_crates(normal = False, proc_macro = False, dev = False, dev_only = False):
-    """EXPERIMENTAL: Finds the fully qualified label of all requested direct crate dependencies \
+    """EXPERIMENTAL -- MAY CHANGE AT ANY TIME: Finds the fully qualified label of all requested direct crate dependencies \
     for the package where this macro is called.
 
     If no parameters are set, all normal and proc_macro dependencies are returned.
